<resources>
    <string name="app_name">OnlineDocDev</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_doctors">Search doctors</string>
    <string name="menu_button">Menu_button</string>
    <string name="city_name_placeholder">City name</string>
    <string name="select_city">Select city</string>
    <string name="select_date">Select date</string>
    <string name="confirm">Confirm</string>
    <string name="search_results">Search results</string>
</resources>