<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PickDateActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="@color/main_blue"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="32dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/select_date"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="@color/main_blue"
                android:contentDescription="@string/menu_button"
                android:src="@drawable/ic_baseline_menu_24" />
        </RelativeLayout>
    </LinearLayout>

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/light_blue"
        android:headerBackground="@color/main_blue" />

    <Button
        android:id="@+id/choose_date_button"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:background="@color/main_blue"
        android:text="@string/confirm"
        android:textColor="@color/white"/>

</LinearLayout>