<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_blue"
    android:gravity="center"
    tools:context=".activities.SearchDoctorByNameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:background="@color/main_blue"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="32dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search_doctors"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="@color/main_blue"
                android:contentDescription="@string/menu_button"
                android:src="@drawable/ic_baseline_menu_24" />
        </RelativeLayout>
        <EditText
            android:id="@+id/search_doctors_view"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/search_shape"
            android:hint="@string/city_name_placeholder"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
    <ListView
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:id="@+id/list_of_doctors_view"
        android:divider="@android:color/transparent"
        android:dividerHeight="20sp"
        />

</LinearLayout>